refactor content and examples

--- a/pages/architecture.mdx
+++ b/pages/architecture.mdx
@@ -2,10 +2,13 @@
 title: Architecture
 description: Understanding the architecture of Unbody
 ---
+
+import { Callout } from 'nextra/components'
+
 # Unbody Architecture
 
 If software is becoming more like humans—able to **think**, **speak**, and **act**—then the backend that powers it needs to work like a brain.
-That’s why Unbody is built on **four functional layers** that mirror how intelligent systems (or humans) operate:
+That's why Unbody is built on **four functional layers** that mirror how intelligent systems (or humans) operate:
 
 - **Perception** *(Knowledge Fabrication)*: how it sees and understands the world
 - **Memory** *(Storage and Persistent Memory)*: what it knows and remembers
@@ -16,24 +19,16 @@ Each layer in the Unbody stack corresponds to a set of modular components that w
 
 Unbody is built primarily in **Node.js**, with a clean modular structure and plugin-friendly design. Each component can be extended, replaced, or deployed independently.
 
----
 
 ## General Workflow
 
 At a high level, the flow of data in Unbody looks like this:
 
-1. **Knowledge Fabrication** or Indexing— the process of transforming and processing raw content into enriched, structured knowledge:
+1. **Knowledge Fabrication** or Indexing— the process of transforming and processing raw content into enriched, structured knowledge.
+2. **Using the Knowledge Base** — once data is indexed, interact with it through [Unbody's Content API](/content-api/overview) and build intelligent features on top.
 
-   - [**Data Ingestion**](./modules/data-ingestion.md):
-   - [**File Processing**](./modules/parsers.md)
-   - [**Enhancement**](./modules/enhancers.md)
-   - [**Vectorization**](./modules/vectorizers.md)
+Unbody also offers standalone [**Generative APIs**](/generative-api/overview), including text, JSON, and image generation. These can be used independently or applied within the content API flow (e.g. for RAG or summarization).
 
-2. **Using the Knowledge Base** — once data is indexed, interact with it through [Unbody's Content API](./apis/content-api.md) and build intelligent features on top.
-
-Unbody also offers standalone [**Generative APIs**](./modules/text-generation.md), including text, JSON, and image generation. These can be used independently or applied within the content API flow (e.g. for RAG or summarization).
-
----
 
 ## 🌳 Perception *(Knowledge Fabrication)*
 
@@ -41,13 +36,9 @@ Where raw content becomes structured, enriched knowledge.
 
 Includes:
 
-- [**Data Ingestion**](./modules/data-ingestion.md)
-- [**Parsers**](./modules/parsers.md)
-- [**Enhancers**](./modules/enhancers.md)
-- [**Vectorizers**](./modules/vectorizers.md)
-- [**Indexing**](./modules/indexing.md)
-
----
+- [**Data Ingestion & Processing**](/data-ingestion/overview)
+- [**Enhancers**](/project-configurations/enhancers)
+- [**Vectorizers**](/project-configurations/vectorizers)
 
 ## 📂 Memory *(Persistent Storage & Vector Memory)*
 
@@ -55,47 +46,43 @@ Stores all enriched data for future retrieval and reasoning.
 
 Includes:
 
-- [**Vector Stores**](./modules/vector-stores.md): Weaviate, Pinecone, Qdrant, etc.
-- [**File Storage**](./modules/file-storage.md): S3, GCS, local file systems
-- [**Metadata DB**](./modules/metadata-db.md)
-- [**Media CDN**](./modules/media-serving.md)
-
----
+- **Vector Stores**: Cloud version currently uses Weaviate as the only vector store. Possiblty of modular vector stores is introduced in our open-source version.
+- **File Storage**: Cloud version only one singular built-in cloud storage. Possiblty of modular storage is introduced in our open-source version.
+- **Media CDN**: Only avaiable on Cloud. Read more: [Image](/image-api/overview), [Video](/video-api), and [Audio](/audio-api)
 
 ## 🧠 Reasoning *(AI Modules & Autonomy)*
 
 Adds intelligence through generation, decision-making, and context-aware behavior.
 
-- [**Text Generation**](./modules/text-generation.md)
-- [**JSON Generation**](./modules/json-generation.md)
-- [**Image Generation**](./modules/image-generation.md)
-- [**Function Calling**](./modules/function-calling.md)
+- [**Text Generation**](/generative-api/text)
+- [**JSON Generation**](/generative-api/json)
+- **Image Generation** (WIP)
+- **Function Calling** (WIP)
 
-Generative modules can be used independently or embedded in [Content API](./apis/content-api.md) queries to create agentic flows like RAG.
+Generative modules can be used independently or embedded in [Content API](/content-api/overview) queries to create agentic flows like RAG.
 
----
 
 ## 🌐 Action *(APIs & Middleware Control Plane)*
 
 Interfaces to interact with your knowledge base and trigger workflows.
 
-- [**Content API**](./apis/content-api.md)
-- [**Push API**](./apis/push-api.md)
-- [**Admin API**](./apis/admin-api.md)
-- [**MCP**](./modules/mcp.md)[ (Middleware Control Plane)](./modules/mcp.md)
+- [**Content API**](/content-api/overview)
+- [**Push API**](/content-api/overview)
+- [**Admin API**](/admin-api)
+- **MCP** (WIP)
 
----
 
 ## Projects & Configuration
 
 Every instance of Unbody is called a **Project**. A project defines a schema, vectorizer, and set of data sources to build your knowledge base.
 
-- Each project can have one or more [**Data Sources**](./concepts/data-sources.md), connected via [**Data Source Providers**](./modules/data-ingestion.md#providers).
-- Projects are created using a [**configuration schema**](./concepts/project-configuration.md) that defines the pipeline and indexing behavior.
+- Each project can have one or more [**Data Sources**](/data-ingestion/overview), connected via [**Data Source Providers**](/data-ingestion/overview#providers).
+- Projects are created using a [**configuration schema**](/project-configurations/overview) that defines the pipeline and indexing behavior.
 
-⚠️ **Limitation**: Project settings cannot currently be edited after creation (e.g. schema or vectorizer). This is a known limitation and a fix is in progress.
+<Callout type="warning" emoji="⚠️">
+**Limitation**: Project settings cannot currently be edited after creation (e.g. schema or vectorizer). This is a known limitation and a fix is in progress.
+</Callout>
 
----
 
 ## Deployment Models
 
