--- a/pages/content-api/data-types/textdocument.mdx
+++ b/pages/content-api/data-types/textdocument.mdx
@@ -1,5 +1,9 @@
 # TextDocument
 
+The `TextDocument` type represents a text document. It includes the document's content, metadata, and any extracted information.
+
+## Schema
+
 | Field | Type | Description |
 | :---------------- | :------: | :---- |
 | authors | string | The authors extracted from the document. |
@@ -25,3 +29,46 @@
 | autoEntities | Array\<string\> | Entities automatically extracted from the document's content. |
 | autoTopics | Array\<string\> | Topics automatically extracted from the document. |
 | blocks | Array\<ImageBlock \| TextBlock\> | The content blocks of the document. |
+
+## Related Types
+
+<PageItems>
+  <PageCard
+    title="TextBlock"
+    description="Individual text blocks within the document"
+    link="/content-api/data-types/textblock"
+  />
+  <PageCard
+    title="ImageBlock"
+    description="Images within the document"
+    link="/content-api/data-types/imageblock"
+  />
+</PageItems>
+
+## Example Usage
+
+```typescript copy
+// Get all text documents
+const { data } = await unbody.get
+  .textDocument
+  .select("title", "text", "url")
+  .exec();
+
+// Search text documents
+const { data } = await unbody.get
+  .textDocument
+  .search.about("my search query")
+  .exec();
+
+// Filter text documents
+const { data } = await unbody.get
+  .textDocument
+  .where({ mimeType: "text/markdown" })
+  .exec();
+```
+
+## Next Steps
+
+- Learn about [searching documents](/content-api/search)
+- Explore [filtering options](/content-api/filters)
+- See [sorting capabilities](/content-api/sorting)
