--- a/pages/first-projects/ai-assistant.mdx
+++ b/pages/first-projects/ai-assistant.mdx
@@ -1,4 +1,4 @@
-import { PageThumbnail } from '../../components/PageThumbnail'
+import { InlineThumbnail } from '../../components/PageThumbnail'
 import { Bot } from 'lucide-react';
 
 # AI Assistant Tutorial
@@ -12,4 +12,4 @@ import { Bot } from 'lucide-react';
 **Time:** ~6min (1min setup + 5min build) | **Level:** Beginner
 
 <br/>
-<PageThumbnail title="Let's start" href="/first-projects/ai-assistant/1-setup" icon={<Bot />}/>
+<InlineThumbnail title="Let's start" link="/first-projects/ai-assistant/1-setup" icon={<Bot />}/>
