--- a/pages/first-projects/ai-assistant/2-connect.mdx
+++ b/pages/first-projects/ai-assistant/2-connect.mdx
@@ -1,13 +1,14 @@
-# Connect Discord
+import { Callout } from 'nextra/components'
 
-1. Click "Add New Source" in your project
-2. Select "Discord" from sources
+# 2. Connect Discord
+
+1. Click `Add New Source` in your project
+2. Select `Discord` from sources
 3. Connect your Discord server
 4. Select channels to include
-5. Click "Initialize" to start processing
+5. Click `Initialize` to start processing
+
 
 <Callout type="info">
-Monitor indexing in `/logs`. Messages will be processed to build your assistant's knowledge base.
+This will take some time. You can monitor indexing in the [dashboard](https://app.unbody.io) under `project` / `source` / `logs`.
 </Callout>
-
-[Next: Build Assistant →](/first-projects/ai-assistant/3-build) 
