--- a/pages/first-projects/rag.mdx
+++ b/pages/first-projects/rag.mdx
@@ -1,4 +1,4 @@
-import { PageThumbnail } from '../../components/PageThumbnail'
+import { InlineThumbnail } from '../../components/PageThumbnail'
 import { Rocket } from 'lucide-react';
 
 # RAG with Google Docs Tutorial
@@ -14,5 +14,5 @@ import { Rocket } from 'lucide-react';
 
 
 <br/>
-<PageThumbnail title="Let's start" href="/first-projects/rag/1-setup" icon={<Rocket />}/>
+<InlineThumbnail title="Let's start" link="/first-projects/rag/1-setup" icon={<Rocket />}/>
 
