--- a/pages/first-projects/rag/2-connect.mdx
+++ b/pages/first-projects/rag/2-connect.mdx
@@ -1,6 +1,6 @@
 import { Callout } from 'nextra/components'
 
-# Connect Google Docs
+# 2. Connect Google Docs
 
 1. Click `Add New Source` in your project dashboard
 2. Select `Google Drive` from data sources
@@ -9,5 +9,5 @@ import { Callout } from 'nextra/components'
 5. Click `Initialize` to start indexing
 
 <Callout type="info">
-This might take some time. Monitor indexing progress in the `/logs` tab. Wait for completion before proceeding.
+This will take some time. You can monitor indexing in the [dashboard](https://app.unbody.io) under `project` / `source` / `logs`.
 </Callout>
