--- a/pages/first-projects/rag/3-build.mdx
+++ b/pages/first-projects/rag/3-build.mdx
@@ -1,7 +1,7 @@
 import { Tab, Tabs } from "@nextui-org/react";
 
 
-# Build A RAG for Google Docs
+# 3. Build A RAG for Google Docs
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"SDK (.ts)"}>
