--- a/pages/first-projects/visual-search/2-connect.mdx
+++ b/pages/first-projects/visual-search/2-connect.mdx
@@ -1,13 +1,13 @@
+import { Callout } from 'nextra/components'
+
 # Connect Images
 
-1. Click "Add New Source" in your project
-2. Select "Google Drive" from sources
+1. Click `Add New Source` in your project
+2. Select `Google Drive` from sources
 3. Connect your Google account
 4. Select folders with images to index
-5. Click "Initialize" to start processing
+5. Click `Initialize` to start processing
 
 <Callout type="info">
-Monitor indexing in `/logs`. Each image will be analyzed and embedded for visual search.
+This will take some time. You can monitor indexing in the [dashboard](https://app.unbody.io) under `project` / `source` / `logs`.
 </Callout>
-
-[Next: Build Search Engine →](/first-projects/visual-search/3-build) 
