--- a/pages/content-api/data-types/googledoc.mdx
+++ b/pages/content-api/data-types/googledoc.mdx
@@ -1,27 +1,72 @@
 # GoogleDoc
 
+The `GoogleDoc` type represents a Google Doc document. It includes the document's content, metadata, and any extracted information.
+
+## Schema
+
 | Field | Type | Description |
-| :---------------- | :------: | :---- |
-| createdAt | Date | The creation date of the document. |
-| html | string | The content of the document in HTML format. |
-| mentions | string | Mentions extracted from the document's content. |
-| mimeType | string | The MIME type of the document. |
-| modifiedAt | Date | The last modification date of the document. |
-| originalName | string | The original name of the file. |
-| path | Array\<string\> | The path to the document in the source. |
-| pathString | string | The path to the document in the source as a string. |
-| remoteId | string | The unique identifier in the source. |
-| size | number | The size of the document in bytes. |
-| slug | string | Slugified version of the original name. |
-| sourceId | string | The source identifier. |
-| subtitle | string | The subtitle extracted from the document. |
-| summary | string | The summary extracted from the document. |
-| tags | Array\<string\> | A list of tags extracted from the document. |
-| text | string | Document's content in plain text. |
-| title | string | The title extracted from the document. |
-| toc | string | The table of contents extracted from the document in JSON format. |
-| autoSummary | string | A summary automatically generated based on the document content. |
-| autoKeywords | Array\<string\> | Keywords automatically extracted from the document. |
-| autoEntities | Array\<string\> | Entities automatically extracted from the document. |
-| autoTopics | Array\<string\> | Topics automatically extracted from the document. |
-| blocks | Array\<ImageBlock \| TextBlock\> | The content blocks of the document. |
+| --- | --- | --- |
+| `id` | `string` | Unique identifier |
+| `createdAt` | `datetime` | Creation timestamp |
+| `updatedAt` | `datetime` | Last update timestamp |
+| `sourceId` | `string` | ID of the data source |
+| `remoteId` | `string` | ID in Google Drive |
+| `title` | `string` | Document title |
+| `text` | `string` | Document text content |
+| `html` | `string` | Document HTML content |
+| `url` | `string` | Google Drive URL |
+| `path` | `string[]` | Path in Google Drive |
+| `pathString` | `string` | Path as string |
+| `mimeType` | `string` | MIME type |
+| `originalName` | `string` | Original filename |
+| `size` | `number` | File size in bytes |
+| `properties` | `object` | Additional properties |
+| `tags` | `string[]` | Document tags |
+| `authors` | `string[]` | Document authors |
+| `subtitle` | `string` | Document subtitle |
+| `description` | `string` | Document description |
+| `toc` | `object[]` | Table of contents |
+| `footnotes` | `object[]` | Document footnotes |
+
+## Related Types
+
+<PageItems>
+  <PageCard
+    title="TextBlock"
+    description="Individual text blocks within the document"
+    link="/content-api/data-types/textblock"
+  />
+  <PageCard
+    title="ImageBlock"
+    description="Images within the document"
+    link="/content-api/data-types/imageblock"
+  />
+</PageItems>
+
+## Example Usage
+
+```typescript copy
+// Get all Google Docs
+const { data } = await unbody.get
+  .googleDoc
+  .select("title", "text", "url")
+  .exec();
+
+// Search Google Docs
+const { data } = await unbody.get
+  .googleDoc
+  .search.about("my search query")
+  .exec();
+
+// Filter Google Docs
+const { data } = await unbody.get
+  .googleDoc
+  .where({ title: "My Document" })
+  .exec();
+```
+
+## Next Steps
+
+- Learn about [searching documents](/content-api/search)
+- Explore [filtering options](/content-api/filters)
+- See [sorting capabilities](/content-api/sorting)
