--- a/pages/first-projects/ai-assistant/3-build.mdx
+++ b/pages/first-projects/ai-assistant/3-build.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "@nextui-org/react";
 
 # Build An AI Assistant
+We want to build an AI assiatnt that uses our Discord messages in a prticular channel.
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"SDK (.ts)"}>
@@ -11,76 +12,57 @@ import { Tab, Tabs } from "@nextui-org/react";
     import { Unbody } from 'unbody';
 
     const unbody = new Unbody({
-      projectId: 'your-project-id',
-      apiKey: 'your-api-key'
+      projectId: 'your-project-id', // dashboard > project settings 
+      apiKey: 'your-api-key' // dashboard > project settings > developer settings
     });
     
-    // Create assistant
-    const assistant = await unbody.assistant.create({
-      name: 'Community Helper',
-      description: 'Helps answer community questions',
-      options: {
-        personality: 'helpful and friendly',
-        contextStrategy: 'semantic'
-      }
-    });
 
-    // Chat with context
-    const response = await unbody.assistant
-      .chat(assistant.id)
-      .withMessage('What were the main topics discussed last week?')
-      .withContext({
-        timeframe: '7d',
-        relevanceThreshold: 0.8
-      })
-      .exec();
+    let history = [];
+    const chat = async (userInput) => {
+        try {
+            const { data: { generate } } = await unbody.get.googleDoc
+                .search.about(userInput)
+                .limit(2)
+                .select("title", "autoSummary")
+                .generate
+                .fromMany(
+                    `You are an AI assistant for discord. generate proper response for user input based on retrieved messages. 
+                    
+                     User input:
+                     ${userInput}
+                    
+                     History:
+                     ${history.map(({ query, content }) => `${query} - ${content}`).join("\n")}
+                    `,
+                    ["title", "text", "autoSummary]
+                )
+                .exec();
 
-    // Stream responses
-    const stream = await unbody.assistant
-      .chat(assistant.id)
-      .withMessage('Summarize recent discussions')
-      .stream()
-      .exec();
+            // Update history if generate is successful.
+            if (generate && generate.result) {
+                history.push({
+                    query: userInput,
+                    content: generate.result
+                });
+            }
 
-    for await (const chunk of stream) {
-      process.stdout.write(chunk.content);
-    }
+            return generate ? generate.result : "No result generated";
+            
+        } catch (error) {
+            console.log(error);
+            return "Error during generation";
+        }
+    };
+
+      console.log(await chat("What did I wrote about EVs?"));
+      console.log(history);
+      console.log(await chat("can you elaborate on that?"));
+      console.log(history);
     ```
     </Tab>
     <Tab title={"GraphQL"}>
         ```graphql
-        mutation {
-          CreateAssistant(
-            input: {
-              name: "Community Helper"
-              description: "Helps answer community questions"
-              options: {
-                personality: "helpful and friendly"
-                contextStrategy: "semantic"
-              }
-            }
-          ) {
-            id
-            name
-          }
-        }
-
-        mutation {
-          Chat(
-            assistantId: "assistant-id"
-            message: "What were the main topics discussed last week?"
-            context: {
-              timeframe: "7d"
-              relevanceThreshold: 0.8
-            }
-          ) {
-            content
-            sources {
-              title
-              relevance
-            }
-          }
-        }
+        
         ```
     </Tab>
 </Tabs>
