--- a/pages/first-projects/visual-search/1-setup.mdx
+++ b/pages/first-projects/visual-search/1-setup.mdx
@@ -1,15 +1,12 @@
-# Project Setup
+# 1. Project Setup
 
 1. Go to [app.unbody.io](https://app.unbody.io) and sign in
 2. Click `Create New Project` in the top right
 3. In advanced menu, configure:
-   - Image Vectorizer: CLIP - ViT-L/14
-   - Image Description: GPT-4V
-   - Text Vectorizer: OpenAI - text-embedding-3-large
+   - Visual Enhancers:
+     - autoVision: `OpenAI` > `GPT-4o-mini`
+   - Vectorizers:
+     - Text: `OpenAI` > `ada-002`
+   - RAG:
+     - Generative Search: `OpenAI` > `GPT-4o-mini`
 4. Click "Create" to finish setup
-
-<Callout type="info">
-Save your Project ID and API Key - you'll need these for development.
-</Callout>
-
-[Next: Connect Google Drive →](/first-projects/visual-search/2-connect) 
