--- a/pages/working-with-videos.mdx
+++ b/pages/working-with-videos.mdx
@@ -325,3 +325,345 @@ Often after extracting subtitles, you'll want to analyze what's happening in you
 </Collapse>
 
 Learn more about advanced video features in our [Video Api Guide](/video-api).
+
+## Video Playback and Streaming
+Mux provides adaptive streaming capabilities through HLS (HTTP Live Streaming) and direct video URLs. Here's how to work with different playback options.
+
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+  <Tabs.Tab>
+    ```typescript copy
+    const {
+      data: { payload: videoFiles },
+    } = await unbody.get.videoFile
+        .where(({ Equal }) => ({
+            mimeType: Equal("video/mp4"),
+        }))
+        .select(
+            "url",
+            "hlsUrl",
+            "playbackId",
+            "duration",
+            "width",
+            "height",
+            "size"
+        )
+        .exec();
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```graphql copy
+    {
+      Get {
+        VideoFile(
+          where: {
+            operator: Equal,
+            path: "mimeType",
+            valueText: "video/mp4"
+          }
+        ) {
+          url
+          hlsUrl
+          playbackId
+          duration
+          width
+          height
+          size
+        }
+      }
+    }
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+<Collapse title="Response">
+```typescript copy
+[
+    {
+        "url": "https://stream.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU.m3u8",
+        "hlsUrl": "https://stream.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU.m3u8",
+        "playbackId": "4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU",
+        "duration": 120.5,
+        "width": 1920,
+        "height": 1080,
+        "size": 4469713
+    }
+]
+```
+</Collapse>
+
+## Video Thumbnails and Previews
+Mux automatically generates thumbnails and animated previews in multiple formats. Here's how to access these assets.
+
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+  <Tabs.Tab>
+    ```typescript copy
+    const {
+      data: { payload: videoFiles },
+    } = await unbody.get.videoFile
+        .select(
+            "thumbnailUrl.png",
+            "thumbnailUrl.jpeg",
+            "thumbnailUrl.webp",
+            "animatedImageUrl.gif",
+            "animatedImageUrl.webp",
+            "duration",
+            "originalName"
+        )
+        .exec();
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```graphql copy
+    {
+      Get {
+        VideoFile {
+          thumbnailUrl {
+            png
+            jpeg
+            webp
+          }
+          animatedImageUrl {
+            gif
+            webp
+          }
+          duration
+          originalName
+        }
+      }
+    }
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+<Collapse title="Response">
+```typescript copy
+[
+    {
+        "thumbnailUrl": {
+            "png": "https://image.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU/thumbnail.png",
+            "jpeg": "https://image.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU/thumbnail.jpg",
+            "webp": "https://image.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU/thumbnail.webp"
+        },
+        "animatedImageUrl": {
+            "gif": "https://image.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU/animated.gif",
+            "webp": "https://image.mux.com/4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU/animated.webp"
+        },
+        "duration": 120.5,
+        "originalName": "product-demo.mp4"
+    }
+]
+```
+</Collapse>
+
+## Video Asset Management
+Mux provides comprehensive asset management capabilities. Here's how to work with video assets and their metadata.
+
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+  <Tabs.Tab>
+    ```typescript copy
+    const {
+      data: { payload: videoFiles },
+    } = await unbody.get.videoFile
+        .select(
+            "assetId",
+            "playbackId",
+            "remoteId",
+            "sourceId",
+            "mimeType",
+            "ext",
+            "pathString",
+            "order",
+            "size",
+            "duration"
+        )
+        .exec();
+    ```
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```graphql copy
+    {
+      Get {
+        VideoFile {
+          assetId
+          playbackId
+          remoteId
+          sourceId
+          mimeType
+          ext
+          pathString
+          order
+          size
+          duration
+        }
+      }
+    }
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+<Collapse title="Response">
+```typescript copy
+[
+    {
+        "assetId": "asset_123456789",
+        "playbackId": "4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU",
+        "remoteId": "remote_123456789",
+        "sourceId": "source_123456789",
+        "mimeType": "video/mp4",
+        "ext": "mp4",
+        "pathString": "/videos/product-demo.mp4",
+        "order": 1,
+        "size": 4469713,
+        "duration": 120.5
+    }
+]
+```
+</Collapse>
+
+## Video Players
+Mux provides official players for various frameworks and platforms. Here's how to integrate them into your application.
+
+<Tabs items={['React', 'Vue.js', 'Vanilla JS', 'Advanced Features']}>
+  <Tabs.Tab>
+    ```typescript copy
+    import MuxPlayer from '@mux/mux-player-react';
+
+    // In your React component
+    function VideoPlayer({ playbackId }) {
+      return (
+        <MuxPlayer
+          streamType="on-demand"
+          playbackId={playbackId}
+          metadata={{
+            video_title: "Product Demo",
+            viewer_user_id: "user-id-123"
+          }}
+          autoPlay={false}
+          loop={false}
+          muted={false}
+          style={{ height: "100%", maxWidth: "100%" }}
+        />
+      );
+    }
+    ```
+  </Tabs.Tab>
+
+  <Tabs.Tab>
+    ```vue copy
+    <template>
+      <mux-player
+        stream-type="on-demand"
+        :playback-id="playbackId"
+        :metadata="{
+          video_title: 'Product Demo',
+          viewer_user_id: 'user-id-123'
+        }"
+        :autoplay="false"
+        :loop="false"
+        :muted="false"
+        style="height: 100%; max-width: 100%;"
+      />
+    </template>
+
+    <script>
+    import 'mux-player';
+
+    export default {
+      data() {
+        return {
+          playbackId: '4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU'
+        }
+      }
+    }
+    </script>
+    ```
+  </Tabs.Tab>
+
+  <Tabs.Tab>
+    ```html copy
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <title>Mux Player Example</title>
+      <script src="https://unpkg.com/mux-player"></script>
+    </head>
+    <body>
+      <mux-player
+        stream-type="on-demand"
+        playback-id="4HQ7pWtI6YPkh01R01X1bpxSGCP4Kei00wP8nvULvSMPAU"
+        metadata='{"video_title": "Product Demo", "viewer_user_id": "user-id-123"}'
+        autoplay="false"
+        loop="false"
+        muted="false"
+        style="height: 100%; max-width: 100%;"
+      ></mux-player>
+    </body>
+    </html>
+    ```
+  </Tabs.Tab>
+
+  <Tabs.Tab>
+    ```typescript copy
+    // Advanced player configuration
+    const playerConfig = {
+      // Playback settings
+      autoplay: false,
+      loop: false,
+      muted: false,
+      playsinline: true,
+      
+      // Quality settings
+      preferPlayback: "mse", // or "native"
+      playbackRates: [0.5, 1, 1.5, 2],
+      
+      // UI customization
+      thumbnailTime: 10, // Show thumbnail at 10 seconds
+      poster: "https://example.com/poster.jpg",
+      
+      // Analytics and metadata
+      metadata: {
+        video_title: "Product Demo",
+        viewer_user_id: "user-id-123",
+        custom_data: "any-json-serializable-data"
+      },
+      
+      // Event handlers
+      onPlay: () => console.log("Video started playing"),
+      onPause: () => console.log("Video paused"),
+      onEnded: () => console.log("Video ended"),
+      onError: (error) => console.error("Playback error:", error)
+    };
+
+    // React example with advanced features
+    <MuxPlayer
+      streamType="on-demand"
+      playbackId={playbackId}
+      // Custom styling
+      style={{
+        height: "100%",
+        maxWidth: "100%",
+        "--media-object-fit": "contain",
+        "--media-object-position": "center"
+      }}
+      // Player preferences
+      preferPlayback="mse"
+      playbackRates={[0.5, 1, 1.5, 2]}
+      // Event handlers
+      onPlay={() => console.log("Video started playing")}
+      onPause={() => console.log("Video paused")}
+      onEnded={() => console.log("Video ended")}
+      onError={(error) => console.error("Playback error:", error)}
+      // Accessibility
+      aria-label="Product demonstration video"
+      // Analytics
+      metadata={{
+        video_title: "Product Demo",
+        viewer_user_id: "user-id-123",
+        custom_data: "any-json-serializable-data"
+      }}
+    />
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+Learn more about Mux Player features and customization in the [Mux Player Documentation](https://docs.mux.com/player).
